# Yalaz-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  OWNER.txt  README.md  run.sh  toolchain.cmake
.github/workflows/: cmake.yml  release.yml
assets/: ATAt.glb  BeigeMeetingRoom_2.glb  FINAL.glb  HOUSEVILLAGEASSETPACK.glb  HaticeBegumDonmezFinal2.glb  MarbleVase001 GLB subdivided.glb  Sofa Free Version.glb  Velociraptor_Walking.glb  construction_site_building_site_architecture.glb  corset.glb  dae_diorama_-_forest_loner (1).glb  devil_seed.glb  duck.glb  free_simple_storefront_interior_pack.glb  vize.glb
release/: Yalaz-Engine.command
release/assets/: GLB.glb  emreye_atcam.glb  gbdr.glb  ghost.glb  high_qualtiy_huggy_wuggy_rig.glb  mov7.glb  sikkoIsler.glb  trees and rocks.glb
scripts/: build-debug.sh  build-release.bat  build-release.sh  run-yalaz.bat
shaders/: 2d.frag  2d.vert  emissive.frag  emissive.vert  endlessgrid.comp  fullscreen.frag  grid.comp  grid.frag  grid.vert  grid_chunked.frag  grid_chunked.vert  input_structures.glsl  materialpreview.frag  materialpreview.frag.glsl  materialpreview.vert  materialpreview.vert.glsl  mesh.frag  mesh.vert  mesh_pbr.frag  normals.frag  normals.vert  outline.frag  outline.vert  pathtrace.comp  plane.comp  plane.frag  plane.vert  pointlight_vis.frag  primitive.frag  primitive.vert  scene_data.glsl  shaded.frag  shaded.vert  solid.frag  solid.vert  triangle.vert  uvchecker.frag  uvchecker.vert
shaders/include/: scene_data.glsl
src/: CMakeLists.txt  GridChunkSystem.cpp  GridChunkSystem.h  camera.cpp  camera.h  engine_state.cpp  engine_state.h  main.cpp  meshes.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
src/assets/: AssetManager.cpp  AssetManager.h
src/core/: Engine.cpp  Engine.h  ISubsystem.h  SubsystemRegistry.cpp  SubsystemRegistry.h
src/geometry/: PrimitiveGenerator.cpp  PrimitiveGenerator.h  PrimitiveType.h
src/graphics/: ResourceManager.cpp  ResourceManager.h  VulkanContext.cpp  VulkanContext.h
src/platform/: Input.cpp  Input.h  Window.cpp  Window.h
src/renderer/: PipelineManager.cpp  PipelineManager.h  RenderSystem.cpp  RenderSystem.h  ViewMode.h
src/scene/: Lighting.cpp  Lighting.h  SceneManager.cpp  SceneManager.h  Selection.cpp  Selection.h
src/ui/: EditorSelection.h  EditorTheme.h  EditorUI.cpp  EditorUI.h  Panel.h  PanelManager.h
src/ui/panels/: ConsolePanel.cpp  ConsolePanel.h  InspectorPanel.cpp  InspectorPanel.h  LightingPanel.cpp  LightingPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
